sp選ばれるポイントまで作成

--- a/index.html
+++ b/index.html
@@ -1,11 +1,163 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+<html lang="ja">
 
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>入学説明会のお申し込み開始 | Kira-Kira Juku</title>
+		<meta name="description"
+			content="難関大学の合格実績No.1のKira-Kira Jukuが、現役高校生・高卒生向け入学説明会の申し込みを開始しました。">
+		<!-- リセットCSS -->
+		<link rel="stylesheet" href="https://unpkg.com/ress@4.0.0/dist/ress.min.css">
+		<!-- Google Fonts -->
+		<!--Noto+Sans+JP、poppins-->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Poppins:ital,wght@0,400;0,700;1,700;1,800&display=swap" rel="stylesheet">
+
+
+		<!-- Bootstrap Icons -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+		<!-- Smart Tab -->
+		<link href="https://cdn.jsdelivr.net/npm/jquery-smarttab@4/dist/css/smart_tab_all.min.css" rel="stylesheet">
+		<!-- CSS -->
+		<link href="assets/style/main.css" rel="stylesheet">
+	</head>
+
+	<body>
+		<main>
+			<!-- ヘッダー -->
+			<header class="header">
+				<h1 class="header_logo"><a href="./" class="header_logo_link"><img src="assets/image/header_logo_01.svg"
+							alt="Kira-Kira Juku"></a></h1>
+
+				<!-- ハンバーガーボタン -->
+				<button type="button" class="hamburger_button">
+					<span class="hamburger_button_bar"></span>
+					<span class="hamburger_button_bar"></span>
+					<span class="hamburger_button_bar"></span>
+				</button>
+
+				<!-- ナビゲーション、ヘッダーメニュー -->
+				<nav class="hamburger_menu header_nav">
+					<ul class="hamburger_menu_list_group header_nav_list_group">
+						<li class="hamburger_menu_list_group_text">
+							<a href="#">
+								<div><img src="assets\image\hamburger_menu_arrow_right_01.svg" alt=""></div>
+								<div>
+									<p>選ばれる3つの理由</p>
+								</div>
+							</a>
+						</li>
+						<li class="hamburger_menu_list_group_text">
+							<a href="#">
+								<div>
+									<img src="assets\image\hamburger_menu_arrow_right_01.svg" alt="">
+								</div>
+								<div>
+									<p>コース・目的</p>
+								</div>
+							</a>
+						</li>
+						<li class="hamburger_menu_list_group_text"><a href="#">
+								<div>
+									<img src="assets\image\hamburger_menu_arrow_right_01.svg" alt="">
+								</div>
+								<div>
+									<p>費用</p>
+								</div>
+							</a>
+						</li>
+					</ul>
+					<a href="#" class="button_session button_session_header">入学説明会に申し込む</a>
+
+				</nav>
+			</header>
+
+			<!-- カバー -->
+			<div class="cover">
+				<picture>
+					<source media="(min-width: 768px)" srcset="assets\image\cover_main_pc_01.png">
+					<img src="assets\image\cover_main_sp_01.png" alt="">
+				</picture>
+				<div class="cover_container">
+					<img src="assets\image\frame_left_01.png" alt="">
+					<div>
+						<p class="cover_text_01">難関大学の合格実績</p>
+						<p class="cover_text_02">No.<span class="cover_text_03">1</span></p>
+					</div>
+					<img src="assets\image\frame_right_01.png" alt="">
+				</div>
+
+				<div class="cover_wrapper_01">
+					<p class="cover_text_04">現役高校生・高卒生</p>
+					<p class="cover_text_05">入学説明会の</p>
+					<p class="cover_text_06">お申し込み開始</p>
+				</div>
+			</div>
+
+
+			<a href="#" class="button_77CB33">入学のお問い合わせ</a>
+			<a href="#" class="button_F6AA00">無料体験に申し込む</a>
+			<a href="#" class="button_3AC8AD">資料請求する</a>
+
+			<!-- 選ばれる3つの理由 -->
+			<section id="reason" class="reason_00">
+				<div class="reason_container">
+					<h2 class="reason_title_01">選ばれる<span class="reason_title_02">3</span>つの理由</h2>
+					<!-- 1個目 -->
+					<div class="reason_row_01 reason_row">
+						<picture>
+							<source media="(min-width: 768px)" srcset="assets\image\reason_main_pc_01.jpg">
+							<img src="assets\image\reason_main_sp_01.jpg" alt="">
+						</picture>
+						<div>
+							<h3 class="reason_point">Point<span class="reason_space"> </span><span class="reason_number">1</span></h3>
+							<h4 class="reason_paragraph_01">実績のある講師陣だから安心</h4>
+							<p class="reason_text_01">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+						</div>
+					</div>
+					<!-- 2個目 -->
+					<div class="reason_row_02 reason_row">
+						<picture>
+							<source media="(min-width: 768px)" srcset="assets\image\reason_main_pc_02.jpg">
+							<img src="assets\image\reason_main_sp_02.jpg" alt="">
+						</picture>
+						<div>
+							<h3 class="reason_point">Point<span class="reason_space"> </span><span class="reason_number">2</span></h3>
+							<h4 class="reason_paragraph_02">オンラインにも対応だから、早送り巻き戻し視聴できる。</h4>
+							<p class="reason_text_02">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+						</div>
+					</div>
+					<!-- 3個目 -->
+					<div class="reason_row_03 reason_row">
+						<picture>
+							<source media="(min-width: 768px)" srcset="assets\image\reason_main_pc_03.jpg">
+							<img src="assets\image\reason_main_sp_03.jpg" alt="">
+						</picture>
+						<div>
+							<h3 class="reason_point">Point<span class="reason_space"> </span><span class="reason_number">3</span></h3>
+							<h4 class="reason_paragraph_03">徹底した個別指導で、弱点を残さずそれぞれに合わせた大学受験対策。</h4>
+							<p class="reason_text_03">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+						</div>
+					</div>
+
+				</div>
+			</section>
+
+
+		</main>
+	</body>
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<!-- waypoints -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
+		integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<!-- SlickのJS -->
+	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<!-- Smart Tab -->
+	<script src="https://cdn.jsdelivr.net/npm/jquery-smarttab@4/dist/js/jquery.smartTab.min.js"></script>
+	<script src="assets/script/main.js"></script>
+
 </html>
