--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 		<title>入学説明会のお申し込み開始 | Kira-Kira Juku</title>
 		<meta name="description"
 			content="難関大学の合格実績No.1のKira-Kira Jukuが、現役高校生・高卒生向け入学説明会の申し込みを開始しました。">
+		<!-- OGP -->
+		<meta property="og:site_name" content="Kira-Kira Juku">
+		<meta property="og:title" content="入学説明会のお申し込み開始 | Kira-Kira Juku">
+		<meta property="og:description" content="難関大学の合格実績No.1のKira-Kira Jukuが、現役高校生・高卒生向け入学説明会の申し込みを開始しました。">
+		<meta property="og:type" content="article">
+		<meta property="og:url" content="https://example.com">
+		<meta property="og:image" content="https://example.com/lp1/assets/image/ogp_image_01.jpg">
 		<!-- リセットCSS -->
 		<link rel="stylesheet" href="https://unpkg.com/ress@4.0.0/dist/ress.min.css">
 		<!-- Google Fonts -->
@@ -50,24 +57,24 @@
 					<ul class="hamburger-menu__list">
 						<li class="header-nav__item">
 							<a href="#reason" class="header-nav__item-link">
-								<img class="header-nav__item-image" src="assets\image\hamburger_menu_arrow_right_01.svg" alt="">
+								<img class="header-nav__item-image" src="assets/image/hamburger_menu_arrow_right_01.svg" alt="">
 								<span class="header-nav__item-text">選ばれる3つの理由</span>
 							</a>
 						</li>
 						<li class="header-nav__item">
 							<a href="#course" class="header-nav__item-link">
-								<img class="header-nav__item-image" src="assets\image\hamburger_menu_arrow_right_01.svg" alt="">
+								<img class="header-nav__item-image" src="assets/image/hamburger_menu_arrow_right_01.svg" alt="">
 								<span class="header-nav__item-text">コース・目的</span>
 							</a>
 						</li>
 						<li class="header-nav__item">
 							<a href="#cost" class="header-nav__item-link">
-								<img class="header-nav__item-image" src="assets\image\hamburger_menu_arrow_right_01.svg" alt="">
+								<img class="header-nav__item-image" src="assets/image/hamburger_menu_arrow_right_01.svg" alt="">
 								<span class="header-nav__item-text">費 用</span>
 							</a>
 						</li>
 					</ul>
-					<a href="#" class="button-session">入学説明会に申し込む</a>
+					<a href="/entry" class="button-session">入学説明会に申し込む</a>
 				</nav>
 
 
@@ -78,16 +85,16 @@
 			<!-- カバー -->
 			<div class="cover">
 				<picture>
-					<source media="(min-width: 768px)" srcset="assets\image\cover_main_pc_01.png">
-					<img src="assets\image\cover_main_sp_01.png" alt="">
+					<source media="(min-width: 768px)" srcset="assets/image/cover_main_pc_01.png">
+					<img src="assets/image/cover_main_sp_01.png" alt="">
 				</picture>
 				<div class="cover__container">
-					<img src="assets\image\frame_left_01.png" alt="">
+					<img src="assets/image/frame_left_01.png" alt="">
 					<div>
 						<p class="cover__text-01">難関大学の合格実績</p>
 						<p class="cover__text-02">No.<span class="cover__text-03">1</span></p>
 					</div>
-					<img src="assets\image\frame_right_01.png" alt="">
+					<img src="assets/image/frame_right_01.png" alt="">
 				</div>
 				<div class="cover__wrapper-01">
 					<p class="cover__text-04">現役高校生・高卒生</p>
@@ -97,9 +104,9 @@
 			</div>
 
 			<div class="button_wrapper">
-				<a href="#" class="button-77CB33">入学のお問い合わせ</a>
-				<a href="#" class="button-F6AA00">無料体験に申し込む</a>
-				<a href="#" class="button-3AC8AD">資料請求する</a>
+				<a href="/inquiry" class="button-77CB33">入学のお問い合わせ</a>
+				<a href="/freetrial" class="button-F6AA00">無料体験に申し込む</a>
+				<a href="/request" class="button-3AC8AD">資料請求する</a>
 			</div>
 
 			<!-- 選ばれる3つの理由 -->
@@ -110,8 +117,8 @@
 					<div class="reason__row-01 reason__row">
 						<div>
 							<picture>
-								<source media="(min-width: 768px)" srcset="assets\image\reason_main_pc_01.jpg">
-								<img src="assets\image\reason_main_sp_01.jpg" alt="">
+								<source media="(min-width: 768px)" srcset="assets/image/reason_main_pc_01.jpg">
+								<img src="assets/image/reason_main_sp_01.jpg" alt="">
 							</picture>
 						</div>
 						<div>
@@ -124,8 +131,8 @@
 					<div class="reason__row-02 reason__row">
 						<div>
 							<picture>
-								<source media="(min-width: 768px)" srcset="assets\image\reason_main_pc_02.jpg">
-								<img src="assets\image\reason_main_sp_02.jpg" alt="">
+								<source media="(min-width: 768px)" srcset="assets/image/reason_main_pc_02.jpg">
+								<img src="assets/image/reason_main_sp_02.jpg" alt="">
 							</picture>
 						</div>
 						<div>
@@ -138,8 +145,8 @@
 					<div class="reason__row-03 reason__row">
 						<div>
 							<picture>
-								<source media="(min-width: 768px)" srcset="assets\image\reason_main_pc_03.jpg">
-								<img src="assets\image\reason_main_sp_03.jpg" alt="">
+								<source media="(min-width: 768px)" srcset="assets/image/reason_main_pc_03.jpg">
+								<img src="assets/image/reason_main_sp_03.jpg" alt="">
 							</picture>
 						</div>
 						<div>
@@ -157,7 +164,7 @@
 					<div>
 						<p class="apply__text">入学ご検討の方は、まずは入学説明会にお越しください</p>
 					</div>
-					<a href="#" class="apply__button-text">入学説明会に申し込む</a>
+					<a href="/entry" class="apply__button-text">入学説明会に申し込む</a>
 				</div>
 			</div>
 
@@ -179,135 +186,119 @@
 									<!-- 1個目 -->
 									<div class="course__tab-content-item">
 										<picture>
-											<source media="(min-width: 768px)" srcset="assets\image\cource_tab_pc_01.jpg">
-											<img src="assets\image\cource_tab_sp_01.jpg" alt="">
+											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_01.png">
+											<img src="assets/image/cource_tab_sp_01.png" alt="">
 										</picture>
-										<h3>
-											<div class="course__tab-content-item--text">
-												<picture>
-													<source media="(min-width: 768px)" srcset="assets\image\course_tab_arrow_right_pc_01.svg">
-													<img src="assets\image\course_tab_arrow_right_sp_01.svg" alt="">
-												</picture>
-												<span class="course__tab-content-item--text-detail">高卒生</span>
-											</div>
-										</h3>
+										<div class="course__tab-content-item--text">
+											<picture>
+												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+											</picture>
+											<span class="course__tab-content-item--text-detail">高卒生</span>
+										</div>
 									</div>
 									<!-- 2個目 -->
 									<div class="course__tab-content-item">
 										<picture>
-											<source media="(min-width: 768px)" srcset="assets\image\cource_tab_pc_02.jpg">
-											<img src="assets\image\cource_tab_sp_02.jpg" alt="">
+											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_02.png">
+											<img src="assets/image/cource_tab_sp_02.png" alt="">
 										</picture>
-										<h3>
-											<div class="course__tab-content-item--text">
-												<picture>
-													<source media="(min-width: 768px)" srcset="assets\image\course_tab_arrow_right_pc_01.svg">
-													<img src="assets\image\course_tab_arrow_right_sp_01.svg" alt="">
-												</picture>
-												<span class="course__tab-content-item--text-detail">高校3年生</span>
-											</div>
-										</h3>
+										<div class="course__tab-content-item--text">
+											<picture>
+												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+											</picture>
+											<span class="course__tab-content-item--text-detail">高校3年生</span>
+										</div>
 									</div>
 									<!-- 3個目 -->
 									<div class="course__tab-content-item">
 										<picture>
-											<source media="(min-width: 768px)" srcset="assets\image\cource_tab_pc_03.jpg">
-											<img src="assets\image\cource_tab_sp_03.jpg" alt="">
+											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_03.png">
+											<img src="assets/image/cource_tab_sp_03.png" alt="">
 										</picture>
-										<h3>
-											<div class="course__tab-content-item--text">
-												<picture>
-													<source media="(min-width: 768px)" srcset="assets\image\course_tab_arrow_right_pc_01.svg">
-													<img src="assets\image\course_tab_arrow_right_sp_01.svg" alt="">
-												</picture>
-												<span class="course__tab-content-item--text-detail">高校2年生</span>
-											</div>
-										</h3>
+										<div class="course__tab-content-item--text">
+											<picture>
+												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+											</picture>
+											<span class="course__tab-content-item--text-detail">高校2年生</span>
+										</div>
 									</div>
 									<!-- 4個目 -->
 									<div class="course__tab-content-item">
 										<picture>
-											<source media="(min-width: 768px)" srcset="assets\image\cource_tab_pc_04.jpg">
-											<img src="assets\image\cource_tab_sp_04.jpg" alt="">
+											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_04.png">
+											<img src="assets/image/cource_tab_sp_04.png" alt="">
 										</picture>
-										<h3>
-											<div class="course__tab-content-item--text">
-												<picture>
-													<source media="(min-width: 768px)" srcset="assets\image\course_tab_arrow_right_pc_01.svg">
-													<img src="assets\image\course_tab_arrow_right_sp_01.svg" alt="">
-												</picture>
-												<span class="course__tab-content-item--text-detail">高校1年生</span>
-											</div>
-										</h3>
+										<div class="course__tab-content-item--text">
+											<picture>
+												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+											</picture>
+											<span class="course__tab-content-item--text-detail">高校1年生</span>
+										</div>
 									</div>
 								</div>
 							</div>
 							<!-- タブ2 -->
-							<div id="tab-1" class="tab-pane" role="tabpanel">
+							<div id="tab-2" class="tab-pane" role="tabpanel">
 								<div class="course__tab-content-wrapper">
 									<!-- 1個目 -->
 									<div class="course__tab-content-item">
 										<picture>
-											<source media="(min-width: 768px)" srcset="assets\image\cource_tab_pc_05.jpg">
-											<img src="assets\image\cource_tab_sp_05.jpg" alt="">
+											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_05.png">
+											<img src="assets/image/cource_tab_sp_05.png" alt="">
 										</picture>
-										<h3>
-											<div class="course__tab-content-item--text">
-												<picture>
-													<source media="(min-width: 768px)" srcset="assets\image\course_tab_arrow_right_pc_01.svg">
-													<img src="assets\image\course_tab_arrow_right_sp_01.svg" alt="">
-												</picture>
-												<span class="course__tab-content-item--text-detail">難関大学・医学部合格を目指す</span>
-											</div>
-										</h3>
+										<div class="course__tab-content-item--text">
+											<picture>
+												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+											</picture>
+											<span class="course__tab-content-item--text-detail">難関大学・医学部合格を目指す</span>
+										</div>
 									</div>
 									<!-- 2個目 -->
 									<div class="course__tab-content-item">
 										<picture>
-											<source media="(min-width: 768px)" srcset="assets\image\cource_tab_pc_06.jpg">
-											<img src="assets\image\cource_tab_sp_06.jpg" alt="">
+											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_06.png">
+											<img src="assets/image/cource_tab_sp_06.png" alt="">
 										</picture>
-										<h3>
-											<div class="course__tab-content-item--text">
-												<picture>
-													<source media="(min-width: 768px)" srcset="assets\image\course_tab_arrow_right_pc_01.svg">
-													<img src="assets\image\course_tab_arrow_right_sp_01.svg" alt="">
-												</picture>
-												<span class="course__tab-content-item--text-detail">名門私立大学合格を目指す</span>
-											</div>
-										</h3>
+										<div class="course__tab-content-item--text">
+											<picture>
+												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+											</picture>
+											<span class="course__tab-content-item--text-detail">名門私立大学合格を目指す</span>
+										</div>
 									</div>
 									<!-- 3個目 -->
 									<div class="course__tab-content-item">
 										<picture>
-											<source media="(min-width: 768px)" srcset="assets\image\cource_tab_pc_07.jpg">
-											<img src="assets\image\cource_tab_sp_07.jpg" alt="">
+											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_07.png">
+											<img src="assets/image/cource_tab_sp_07.png" alt="">
 										</picture>
-										<h3>
-											<div class="course__tab-content-item--text">
-												<picture>
-													<source media="(min-width: 768px)" srcset="assets\image\course_tab_arrow_right_pc_01.svg">
-													<img src="assets\image\course_tab_arrow_right_sp_01.svg" alt="">
-												</picture>
-												<span class="course__tab-content-item--text-detail">国公立大学合格を目指す</span>
-											</div>
-										</h3>
+										<div class="course__tab-content-item--text">
+											<picture>
+												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+											</picture>
+											<span class="course__tab-content-item--text-detail">国公立大学合格を目指す</span>
+										</div>
 									</div>
 									<!-- 4個目 -->
 									<div class="course__tab-content-item">
 										<picture>
-											<source media="(min-width: 768px)" srcset="assets\image\cource_tab_pc_08.jpg">
-											<img src="assets\image\cource_tab_sp_08.jpg" alt="">
+											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_08.png">
+											<img src="assets/image/cource_tab_sp_08.png" alt="">
 										</picture>
-										<h3>
-											<div class="course__tab-content-item--text">
-												<picture>
-													<source media="(min-width: 768px)" srcset="assets\image\course_tab_arrow_right_pc_01.svg">
-													<img src="assets\image\course_tab_arrow_right_sp_01.svg" alt="">
-												</picture>
-												<span class="course__tab-content-item--text-detail">海外の大学合格を目指す</span>
-											</div>
-										</h3>
+										<div class="course__tab-content-item--text">
+											<picture>
+												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+											</picture>
+											<span class="course__tab-content-item--text-detail">海外の大学合格を目指す</span>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -322,7 +313,7 @@
 					<div>
 						<p class="apply__text">入学ご検討の方は、まずは入学説明会にお越しください</p>
 					</div>
-					<a href="#" class="apply__button-text">入学説明会に申し込む</a>
+					<a href="/entry" class="apply__button-text">入学説明会に申し込む</a>
 				</div>
 			</div>
 
@@ -381,7 +372,7 @@
 					<div>
 						<p class="apply__text">入学ご検討の方は、まずは入学説明会にお越しください</p>
 					</div>
-					<a href="#" class="apply__button-text">入学説明会に申し込む</a>
+					<a href="/entry" class="apply__button-text">入学説明会に申し込む</a>
 				</div>
 			</div>
 
@@ -389,19 +380,19 @@
 				<div>
 					<div class="question">
 						<picture>
-							<source media="(min-width: 768px)" srcset="assets\image\question_pc_01.png">
-							<img src="assets\image\question_sp_01.png" alt="">
+							<source media="(min-width: 768px)" srcset="assets/image/question_pc_01.png">
+							<img src="assets/image/question_sp_01.png" alt="">
 						</picture>
-						<p class="question__text">よくあるご質問</p>
+						<a href="/faq" class="question__text">よくあるご質問</a>
 					</div>
 				</div>
 				<div>
 					<div class="search">
 						<picture>
-							<source media="(min-width: 768px)" srcset="assets\image\search_pc_01.png">
-							<img src="assets\image\search_sp_01.png" alt="">
-							<p class="search__text">お近くの教室を探す</p>
+							<source media="(min-width: 768px)" srcset="assets/image/search_pc_01.png">
+							<img src="assets/image/search_sp_01.png" alt="">
 						</picture>
+						<a href="/search" class="search__text">お近くの教室を探す</a>
 					</div>
 				</div>
 			</div>
@@ -418,18 +409,17 @@
 
 
 		</main>
+
+		<!-- jQuery -->
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<!-- waypoints -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
+			integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
+			crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<!-- Smart Tab -->
+		<script src="https://cdn.jsdelivr.net/npm/jquery-smarttab@4/dist/js/jquery.smartTab.min.js"></script>
+		<!-- JS -->
+		<script src="assets/script/main.js"></script>
 	</body>
-	<!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<!-- waypoints -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
-		integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
-		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<!-- SlickのJS -->
-	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-	<!-- Smart Tab -->
-	<script src="https://cdn.jsdelivr.net/npm/jquery-smarttab@4/dist/js/jquery.smartTab.min.js"></script>
-	<!-- JS -->
-	<script src="assets/script/main.js"></script>
 
 </html>
