--- a/index.html
+++ b/index.html
@@ -185,16 +185,20 @@
 								<div class="course__tab-content-wrapper">
 									<!-- 1個目 -->
 									<div class="course__tab-content-item">
-										<picture>
-											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_01.png">
-											<img src="assets/image/cource_tab_sp_01.png" alt="">
-										</picture>
-										<div class="course__tab-content-item--text">
+										<a href="/entry" class="course__tab-content-item--link">
 											<picture>
-												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
-												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_01.png">
+												<img src="assets/image/cource_tab_sp_01.png" alt="">
 											</picture>
-											<span class="course__tab-content-item--text-detail">高卒生</span>
+										</a>
+										<div class="course__tab-content-item--text">
+											<a href="/entry" class="course__tab-content-item--link-text">
+												<picture>
+													<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+													<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												</picture>
+												<span class="course__tab-content-item--text-detail">高卒生</span>
+											</a>
 										</div>
 									</div>
 									<!-- 2個目 -->
@@ -377,23 +381,23 @@
 			</div>
 
 			<div class="question__container ">
-				<div>
-					<div class="question">
+				<div class="question">
+					<a href="/faq" class="question__link">
 						<picture>
 							<source media="(min-width: 768px)" srcset="assets/image/question_pc_01.png">
 							<img src="assets/image/question_sp_01.png" alt="">
 						</picture>
-						<a href="/faq" class="question__text">よくあるご質問</a>
-					</div>
+						<span class="question__text">よくあるご質問</span>
+					</a>
 				</div>
-				<div>
-					<div class="search">
+				<div class="search">
+					<a href="/search" class="search__link">
 						<picture>
 							<source media="(min-width: 768px)" srcset="assets/image/search_pc_01.png">
 							<img src="assets/image/search_sp_01.png" alt="">
 						</picture>
-						<a href="/search" class="search__text">お近くの教室を探す</a>
-					</div>
+						<span class="search__text">お近くの教室を探す</span>
+					</a>
 				</div>
 			</div>
 
